--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
     "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +40,3 @@
   },
   "proxy": "http://localhost:5000"
 }
-
-
